tests/ui/typeck/output-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/output-type-mismatch.rs:3:31
   |
LL | fn main() { let i: isize; i = f(); }
   |                    -----      ^^^ expected `isize`, found `()`
   |                    |
   |                    expected due to this type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
